<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.monishakram.entertainmentspot.ConnectionActivity"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/editTextIP"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="5dp"
            android:textSize="23sp"
            android:background="@drawable/edit_text"
            android:textColor="@color/textColor"
            android:inputType="text"
            android:hint="@string/ip_address"
            android:paddingStart="10dp"
            android:maxLength="15"
            android:maxLines="1"
            tools:ignore="RtlSymmetry"
            android:text="172.31.76.148"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:id="@+id/editTextPort"
            android:background="@drawable/edit_text"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="40dp"
            android:paddingStart="10dp"
            android:textSize="23sp"
            android:hint="@string/port"
            android:textColor="@color/textColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="4"
            tools:ignore="LabelFor,RtlSymmetry"
            android:text="2002"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:id="@+id/buttonConnect"
        android:text="@string/buttonConnect"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_activity_connection"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:paddingStart="5dp"
        android:elevation="20dp"
        tools:ignore="RtlSymmetry" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/progressBar"
        android:visibility="invisible"/>

</LinearLayout>
